# CppCallMatlabCmakeExample

./: CMakeLists.txt  README.md  README.rst  demo.m  demo2.m  main.cpp
